# kotoba-plus

./: .gitignore  CMakeLists.txt  README.md  README_BUILD.md  fileDumper.py  gotango.sqbpro
cli/: CMakeLists.txt
cli-kotobaplus/: Makefile
cli-kotobaplus/src/: main.c
cli-tango/: Makefile
cli-tango/src/: main.c  sizetest.c.bak
cli/include/: build.h  parser.h  utils.h
cli/src/: main.c
core/: CMakeLists.txt  Makefile  readme.md
core/include/: arena.h  dict_tokens.h  fsrs.h  fsrs_sync.h  index.h  index_search.h  kana.h  kotoba.h  loader.h  log.h  srs.h  srs_sync.h  types.h  viewer.h  writer.h
core/src/: dict_tokens.c  fsrs.c  fsrs_sync.c  index.c  index_search.c  kana.c  loader.c  log.c  main.c  srs.c  srs_sync.c  viewer.c  writer.c
gui-desktop/: ThemeManager.cpp  ThemeManager.h  app_context.cpp  contextDumper.py  gui-desktop.pro  main.cpp  mainwindow.cpp  mainwindow.h  search_presenter.cpp  search_presenter.h  search_result_model.cpp  search_service.cpp  search_service.h
gui-desktop/app/: context.cpp  context.h
gui-desktop/search/: presenter.cpp  presenter.h  result_model.cpp  result_model.h  search_presenter.cpp  search_presenter.h  search_service.h  service.cpp
gui-desktop/srs/: srs_presenter.cpp  srs_presenter.h  srs_service.cpp  srs_service.h
gui-desktop/themes/: dark.qss  light.qss
gui-desktop/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
gui-desktop/ui/details/: detailspage.cpp  detailspage.h  detailspage.ui
gui-desktop/ui/dictionary/: dictionarypage.cpp  dictionarypage.h  dictionarypage.ui
gui-desktop/ui/srs/: srsdashboard.cpp  srsdashboard.h  srsdashboard.ui  srspage.cpp  srspage.h  srspage.ui
gui-qml/: CMakeLists.txt  README_QML.MD
gui-qml/android/: AndroidManifest.xml
gui-qml/android/app/: build.gradle
gui-qml/android/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
gui-qml/android/res/mipmap-anydpi-v26/: ic_launcher.xml
gui-qml/android/src/com/kotobaplus/app/: MainActivity.java
gui-qml/app/: AndroidBridge.cpp  AndroidBridge.h  AppController.h  AppPaths.h  Configuration.cpp  Configuration.h  config.ini  main.cpp
gui-qml/infrastructure/: CardType.h  CustomDeck.h  DictionaryRepository.cpp  DictionaryRepository.h  SearchService.cpp  SearchService.h  SrsHistoryLog.cpp  SrsHistoryLog.h  SrsScheduler.cpp  SrsScheduler.h  SrsService.cpp  SrsService.h
gui-qml/resources/: qml.qrc
gui-qml/resources/qml/: Main.qml
gui-qml/resources/qml/components/: ActionButton.qml  BackButton.qml  EntryView.qml  SenseItem.qml  SrsCardDelegate.qml  StatCard.qml  StepperField.qml  Tag.qml  ToggleSwitch.qml
gui-qml/resources/qml/pages/: DetailsPage.qml  DictionaryPage.qml  SettingsPage.qml  SplashPage.qml  SrsCardDetailPage.qml  SrsCardDetails.qml  SrsDashboard.qml  SrsLibrary.qml  SrsStudy.qml
gui-qml/resources/qml/theme/: Theme.qml
gui-qml/viewmodels/: EntryDetailsViewModel.cpp  EntryDetailsViewModel.h  SearchResultModel.cpp  SearchResultModel.h  SearchViewModel.cpp  SearchViewModel.h  SrsLibraryViewModel.cpp  SrsLibraryViewModel.h  SrsViewModel.cpp  SrsViewModel.h
kotoba-core/: CMakeLists.txt  readme.md
kotoba-core/include/: api.h  binbuf.h  entry_builder.h  index.h  index_search.h  kana.h  kotoba.h  kotoba_dat.h  kotoba_dat_builder.h  kotoba_dat_collect.h  kotoba_dat_loader.h  kotoba_dat_writer.h  kotoba_dict.h  kotoba_file.h  kotoba_kana.h  kotoba_kana_offsets.h  kotoba_loader.h  kotoba_types.h  kotoba_viewer.h  kotoba_writer.h  srs.h  srs_sync.h  types.h  writer.h
kotoba-core/include/kotoba/: kana.h  loader.h  types.h  viewer.h  writer.h
kotoba-core/include/kotoba/dat/: builder.h  collect.h  dat.h  loader.h  offsets.h  writer.h
kotoba-core/src/: entry_builder.c  index.c  index_search.c  kana.c  kotoba_dat_builder.c  kotoba_dat_collect.c  kotoba_dat_loader.c  kotoba_dat_offsets.c  kotoba_dat_writer.c  kotoba_dict.c  kotoba_file.c  kotoba_kana.c  kotoba_loader.c  kotoba_viewer.c  kotoba_writer.c  loader.c  srs.c  srs_sync.c  viewer.c
kotoba-core/src/kotoba/: kana.c  loader.c  viewer.c  writer.c
kotoba-core/src/kotoba/dat/: builder.c  collect.c  loader.c  offsets.c  writer.c
libkotobaplus/: CMakeLists.txt
libkotobaplus/include/: binary-header.h  libkotobaplus.h
libkotobaplus/src/: libkotobaplus.c
libtango/: CMakeLists.txt
libtango/bak/: cards-review.c  cards-review.h  cards.c
libtango/include/: kana-converter.h  libtango.h
libtango/src/: kana-converter.c  libtango.c
qt-desktop/: listitemdelegate.cpp  listitemdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-desktop.pro  searchresultdelegate.h  searchresultmodel.cpp  searchresultmodel.h
xml-parser/: Makefile
xml-parser/assets/: dummy
xml-parser/include/: utils.h
xml-parser/src/: main copy.c  main.c
